fix: no scrollbar, layout shift

--- a/app/globals.css
+++ b/app/globals.css
@@ -219,6 +219,14 @@ body {
 }
 
 @layer utilities {
+    .no-scrollbar {
+        -ms-overflow-style: none;
+        scrollbar-width: none;
+    }
+    .no-scrollbar::-webkit-scrollbar {
+        display: none;
+    }
+
     .custom-dotted-underline {
         --dot-color: currentColor;
         --dot-size: 1px;
